# 13-week-homework

./: .gitattributes  Cargo.toml  README.md
.trunk/: trunk.yaml
assets/: nginx_logs.parquet
nginx/: Cargo.toml
nginx/src/: main.rs
notebooks/.ipynb_checkpoints/: nginx_logs.parquet  taotie-checkpoint.ipynb
src/: lib.rs  main.rs
src/backend/: mod.rs
src/backend/fusion/: describe.rs  df_describe.rs  mod.rs
src/cli/: describe.rs
