[package]
name = "nginx"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
polars = { version = "0.41.3", features = [
  "parquet",
  "timezones",
  "sql",
  "lazy",
] }
reqwest = { version = "0.12.5", features = ["blocking"] }
regex = "1.10.5"
tokio = "1.39.1"
ureq = "2.10.0"